{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 601,
  "lineage": "fc6b6808-e6c7-131a-41d2-d026cc2bc0ae",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "S1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01a7d95ecd129c2f1",
            "arn": "arn:aws:ec2:us-west-2:834282834019:instance/i-071159d6433e0f4a3",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-071159d6433e0f4a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04b48755f4589037c",
            "private_dns": "ip-10-0-2-125.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-048774ce705e805e7",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ec9181623a862ad",
            "tags": {
              "Name": "Web-Server1"
            },
            "tags_all": {
              "Name": "Web-Server1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0963b399339f4d94b"
            ]
          },
          "dependencies": [
            "aws_subnet.Pvt-Sub1",
            "aws_vpc.Mohsin-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:834282834019:internet-gateway/igw-01fc761682f3f28d5",
            "id": "igw-01fc761682f3f28d5",
            "owner_id": "834282834019",
            "tags": {
              "Name": "Mohsin-IGW"
            },
            "tags_all": {
              "Name": "Mohsin-IGW"
            },
            "vpc_id": "vpc-0d2b8f79c123e7910"
          },
          "dependencies": [
            "aws_vpc.Mohsin-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Mohsin-Pub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:834282834019:route-table/rtb-07443ef7ac9abddb9",
            "id": "rtb-07443ef7ac9abddb9",
            "owner_id": "834282834019",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Mohsin-Pub-RT"
            },
            "tags_all": {
              "Name": "Mohsin-Pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2b8f79c123e7910"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Mohsin-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Mohsin-Pvt-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:834282834019:route-table/rtb-035391b777ffbc549",
            "id": "rtb-035391b777ffbc549",
            "owner_id": "834282834019",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Mohsin-Pvt-RT"
            },
            "tags_all": {
              "Name": "Mohsin-Pvt-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2b8f79c123e7910"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Mohsin-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_id": "igw-01fc761682f3f28d5",
            "id": "rtbassoc-0c533505fa9be5d16",
            "route_table_id": "rtb-07443ef7ac9abddb9"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.Mohsin-Pub-RT",
            "aws_vpc.Mohsin-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6d9594c13b0b3da",
            "route_table_id": "rtb-035391b777ffbc549",
            "subnet_id": "subnet-05ec9181623a862ad"
          },
          "dependencies": [
            "aws_route_table.Mohsin-Pvt-RT",
            "aws_subnet.Pvt-Sub1",
            "aws_vpc.Mohsin-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088c65c97a0715218",
            "route_table_id": "rtb-035391b777ffbc549",
            "subnet_id": "subnet-014c2d571a94cfb1f"
          },
          "dependencies": [
            "aws_route_table.Mohsin-Pvt-RT",
            "aws_subnet.Pvt-sub2",
            "aws_vpc.Mohsin-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043c796266dc9778e",
            "route_table_id": "rtb-035391b777ffbc549",
            "subnet_id": "subnet-0a68c8b78ea968382"
          },
          "dependencies": [
            "aws_route_table.Mohsin-Pvt-RT",
            "aws_subnet.Pvt-Sub3",
            "aws_vpc.Mohsin-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b9e046fe8ddd7c8",
            "route_table_id": "rtb-07443ef7ac9abddb9",
            "subnet_id": "subnet-017258f8fb419acaa"
          },
          "dependencies": [
            "aws_route_table.Mohsin-Pub-RT",
            "aws_subnet.Pub-sub1",
            "aws_vpc.Mohsin-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eeaa5c629125cf54",
            "route_table_id": "rtb-07443ef7ac9abddb9",
            "subnet_id": "subnet-028e846cdbfa88210"
          },
          "dependencies": [
            "aws_route_table.Mohsin-Pub-RT",
            "aws_subnet.Pub-sub2",
            "aws_vpc.Mohsin-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:834282834019:security-group/sg-027734571c245c0cc",
            "description": "Allow all traffic to RDS",
            "egress": [],
            "id": "sg-027734571c245c0cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-security-group",
            "name_prefix": "",
            "owner_id": "834282834019",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d2b8f79c123e7910"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Mohsin-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Pub-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:834282834019:subnet/subnet-017258f8fb419acaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017258f8fb419acaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "834282834019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pub-sub1"
            },
            "tags_all": {
              "Name": "Pub-sub1"
            },
            "vpc_id": "vpc-0d2b8f79c123e7910"
          },
          "dependencies": [
            "aws_vpc.Mohsin-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Pub-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:834282834019:subnet/subnet-028e846cdbfa88210",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028e846cdbfa88210",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "834282834019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pub-sub2"
            },
            "tags_all": {
              "Name": "Pub-sub2"
            },
            "vpc_id": "vpc-0d2b8f79c123e7910"
          },
          "dependencies": [
            "aws_vpc.Mohsin-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Pvt-Sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:834282834019:subnet/subnet-05ec9181623a862ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ec9181623a862ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "834282834019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pvt-sub1"
            },
            "tags_all": {
              "Name": "Pvt-sub1"
            },
            "vpc_id": "vpc-0d2b8f79c123e7910"
          },
          "dependencies": [
            "aws_vpc.Mohsin-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Pvt-Sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:834282834019:subnet/subnet-0a68c8b78ea968382",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a68c8b78ea968382",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "834282834019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pvt-sub3"
            },
            "tags_all": {
              "Name": "Pvt-sub3"
            },
            "vpc_id": "vpc-0d2b8f79c123e7910"
          },
          "dependencies": [
            "aws_vpc.Mohsin-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Pvt-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:834282834019:subnet/subnet-014c2d571a94cfb1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014c2d571a94cfb1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "834282834019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pvt-sub2"
            },
            "tags_all": {
              "Name": "Pvt-sub2"
            },
            "vpc_id": "vpc-0d2b8f79c123e7910"
          },
          "dependencies": [
            "aws_vpc.Mohsin-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Mohsin-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:834282834019:vpc/vpc-0d2b8f79c123e7910",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c825d45ac68d5d53",
            "default_route_table_id": "rtb-0d6a5b1d4cd46228c",
            "default_security_group_id": "sg-0963b399339f4d94b",
            "dhcp_options_id": "dopt-0fb0d2d53d02827cc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d2b8f79c123e7910",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d6a5b1d4cd46228c",
            "owner_id": "834282834019",
            "tags": {
              "Name": "Mohsin-VPC"
            },
            "tags_all": {
              "Name": "Mohsin-VPC"
            }
          }
        }
      ]
    }
  ]
}